--- a/230106.md
+++ b/230106.md
@@ -3,3 +3,20 @@
 2. Numpy와 배열의 차이점을 이해하고 설명할 수 있다.
 3. Pandas의 기능을 이용해서 쿼리 연동을 할 수 있다.
 4. 시각화 개념을 이해하고 차트 연동의 속성을 설정할 수 있다.
+
+#### ANACONDA3_[13]NumpyBasic
+# ndarray(shape[, dtype, buffer, offset, ...])
+import numpy as np 로 Numpy 호출
+a = np.array([0,1,2,3,4,5]) # = ndarray
+print(a)
+print(type(a))
+print(a.dtype) # 0, 1 = bit * 8 = 1byte = 주소가 생성됨 = -128 ~ 127
+# 주소 생성 -> 메모리 할당 -> 값 대입
+# 불리언   bool(1)
+# 정수형 short(2) -> int32(4) -> int64(8) -> long(8) ~ 16
+# 실수형 float(4) -> double(8)
+# 문자와 문자열 -> str
+
+# ex) 'int32' = 정수형 32bit, 'i4' = 정수형 4byte
+ # float64 = f8 = 실수형 64bit = 실수형 8byte
+
