--- a/230106.md
+++ b/230106.md
@@ -20,3 +20,52 @@ print(a.dtype) # 0, 1 = bit * 8 = 1byte = 주소가 생성됨 = -128 ~ 127
 # ex) 'int32' = 정수형 32bit, 'i4' = 정수형 4byte
  # float64 = f8 = 실수형 64bit = 실수형 8byte
 
+#### ANACONDA3_[14]Pandas_Basic
+1)시리즈 및 데이터 프레임
+2)시리즈 (Series) 만들기
+3)데이터 프레임 (DataFrame) 만들기
+4)CSV 파일에서 데이터 프레임 만들기
+5)데이터 참조 및 데이터 조건 검색
+6) 열 추가 및 삭제 ,행 추가 및 삭제
+7)데이터 정렬,  통계량
+8)데이터 연결, 결합
+9)데이터 그룹화
+10)결손값, 시계열 데이터 처리
+Pandas 주소 : https://pandas.pydata.org/
+
+s3 = pd.Series({'e':'1', 'b':'2', 'd':'3'})
+e    1
+b    2
+d    3
+dtype: object
+=====================
+d1 = pd.DataFrame([[0,1,2],[3,4,5],[6,7,8],[9,10,11]],
+                 index = [10,11,12,13],
+                 columns = ['c1','c2','c3'])
+
+    c1  c2  c3
+10   0   1   2
+11   3   4   5
+12   6   7   8
+13   9  10  11
+
+iris_d = pd.read_csv('../data/iris.csv')
+iris_d
+	sepallength	sepalwidth	petallength	petalwidth	class
+0	5.1	        3.5	        1.4	        0.2	        Iris-setosa
+1	4.9	        3.0	        1.4	        0.2	        Iris-setosa
+2	4.7	        3.2	        1.3	        0.2	        Iris-setosa
+3	4.6	        3.1	        1.5	        0.2	        Iris-setosa
+4	5.0	        3.6	        1.4	        0.2	        Iris-setosa
+...	...	        ...	        ...	        ...	        ...
+145	6.7	        3.0	        5.2	        2.3	        Iris-virginica
+146	6.3	        2.5	        5.0	        1.9	        Iris-virginica
+147	6.5	        3.0	        5.2	        2.0	        Iris-virginica
+148	6.2	        3.4	        5.4	        2.3	        Iris-virginica
+149	5.9	        3.0	        5.1	        1.8	        Iris-virginica
+
+=============
+iris_d['class'].head(10)
+-> # 원하는 열을 추출하고 싶다면, 데이터프레임['열이름'] 작성 -> Series 객체로 리턴
+r = iris_d['class']
+r -> class 열만 리턴됨
