--- a/230106.md
+++ b/230106.md
@@ -69,3 +69,12 @@ iris_d['class'].head(10)
 -> # 원하는 열을 추출하고 싶다면, 데이터프레임['열이름'] 작성 -> Series 객체로 리턴
 r = iris_d['class']
 r -> class 열만 리턴됨
+=============
+
+7) 데이터 정렬, 통계량
+sort_index(): 데이터 프레임의 인덱스를 기반으로 정렬
+sort_values(): 임의의 열의 값에 의한 sort
+ inplace = False sort에 의해 새로운 데이터 프레임을 작성
+
+ sort_values(by, axis: 'Axis' = 0, ascending=True, inplace: 'bool' = False, kind: 'str' = 'quicksort', na_position: 'str' = 'last', ignore_index: 'bool' = False, key: 'ValueKeyFunc' = None) 
+ 
